--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kitchen Mix</title>
     <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="icon" href="img/logo.svg">
+  </head>
 <body>
     <header>
         <nav>
@@ -21,5 +22,8 @@
           </div>
       </nav>
       </header>
+      <main>
+        <img src="img/main.svg" alt="">
+      </main>
 </body>
 </html>
