--- a/index.html
+++ b/index.html
@@ -25,5 +25,12 @@
       <main>
         <img src="img/main.svg" alt="">
       </main>
+
+      <section class="align-start">
+        <article class="start">
+          <h1>Vamos começar !</h1>
+          <button><h1>Selecione seus ingredientes aqui ! </h1><img src="img/click.svg" alt=""></button>
+        </article>
+      </section>
 </body>
 </html>
