--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
         <article class="tutorial">
           <h2>Como iniciar?</h2>
           <h1>No quadrado abaixo clique no botão “Selecione seus ingredientes aqui !” e clique na <br> bolinha para selecionar os ingredientes que você deseja utilizar na sua refeição.</h1>
-          <div>
-
+          <div class="card-ing">
+            <div class="ball"></div>
+            <img src="img/farinha.svg" alt="">
+              <p>Farinha de Trigo</p>
           </div>
           <h1>Caso não encontre o ingrediente que deseja, clique no botão verde e adicione o <br> elemento que deseja</h1>
           <img src="img/add.svg" alt="">
