--- a/index.html
+++ b/index.html
@@ -46,5 +46,17 @@
           <button><h1>Selecione seus ingredientes aqui ! </h1><img src="img/click.svg" alt=""></button>
         </article>
       </section>
+
+      <section class="section-exp">
+        <article class="explore">
+          <h1>Explore mais receitas :</h1>
+          <div class="card-exp">
+            <img src="img/panqueca.svg" alt="">
+            <div class="retangle"></div>
+            <h1>Panquecas Americanas</h1>
+            <p>Panquecas macias com mel</p>
+          </div>
+        </article>
+      </section>
 </body>
 </html>
