--- a/index.html
+++ b/index.html
@@ -58,5 +58,12 @@
           </div>
         </article>
       </section>
+
+      <section class="faixa-laranja">
+        <article>
+
+        </article>
+      </section>
+
 </body>
 </html>
