--- a/index.html
+++ b/index.html
@@ -60,8 +60,27 @@
       </section>
 
       <section class="faixa-laranja">
-        <article>
-
+        <article class="align-faixa">
+          <div class="card-one">
+            <img src="img/copo.svg" alt="">
+            <h1>Fit</h1>
+            <p>Opcões nutritivas e deliciosas <br> para você alcaçar seus <br> objetivos</p>
+          </div>
+          <div class="card-one">
+            <img src="img/copo.svg" alt="">
+            <h1>Fit</h1>
+            <p>Opcões nutritivas e deliciosas <br> para você alcaçar seus <br> objetivos</p>
+          </div>
+          <div class="card-one">
+            <img src="img/copo.svg" alt="">
+            <h1>Fit</h1>
+            <p>Opcões nutritivas e deliciosas <br> para você alcaçar seus <br> objetivos</p>
+          </div>
+          <div class="card-one">
+            <img src="img/copo.svg" alt="">
+            <h1>Fit</h1>
+            <p>Opcões nutritivas e deliciosas <br> para você alcaçar seus <br> objetivos</p>
+          </div>
         </article>
       </section>
 
