--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
           <div class="insta-footer">
             <img src="img/icon insta.svg" alt="ícone branco do instagram">
-            <p>@velnic_footwear</p>
+            <p>@kitchen_mix</p>
           </div>
           <div class="local-footer">
             <img src="img/localização icon.svg" alt="ícone branco de localização">
@@ -106,7 +106,7 @@
           </div>
           <div class="carta-footer">
             <img src="img/carta icon.svg" alt="ícone branco de carta">
-            <p>contato@velnic.footwear.com</p>
+            <p>contato@kitchenmix.com</p>
           </div>
         </article>
         <article class="menu-footer">
@@ -124,9 +124,8 @@
           <li>LOCALIZAÇÃO:</li>
           <hr>
           <map>
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.7800693664562!2d-46.724310725172565!3d-23.64804606478164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce510e8d3746ed%3A0x3e9f3a76e1ebfb69!2sEscola%20Senai%20Su%C3%AD%C3%A7o-Brasileira%20Paulo%20Ernesto%20Tolle!5e0!3m2!1spt-BR!2sbr!4v1713235578941!5m2!1spt-BR!2sbr"
-              allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.559424972781!2d-46.72040232517223!3d-23.655944165072835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce51a36a2b5357%3A0x6375faa71efa063e!2sUniversidade%20Cruzeiro%20do%20Sul%20-%20Campus%20Santo%20Amaro!5e0!3m2!1spt-BR!2sbr!4v1725216481621!5m2!1spt-BR!2sbr" 
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
           </map>
           <img src="img/logo.svg" alt="ilustração de um mini milkshake rosa">
