--- a/index.html
+++ b/index.html
@@ -29,21 +29,16 @@
       <section class="align-tut">
         <article class="tutorial">
           <h2>Como iniciar?</h2>
-          <h1>No quadrado abaixo clique no botão “Selecione seus ingredientes aqui !” e clique na <br> bolinha para selecionar os ingredientes que você deseja utilizar na sua refeição.</h1>
-          <div class="card-ing">
-            <div class="ball"></div>
-            <img src="img/farinha.svg" alt="">
-              <p>Farinha de Trigo</p>
-          </div>
-          <h1>Caso não encontre o ingrediente que deseja, clique no botão verde e adicione o <br> elemento que deseja</h1>
-          <img src="img/add.svg" alt="">
+          <h1>No quadrado abaixo clique no botão branco e descreva os ingredientes que possui <br> em sua dispensa e deseja utilizar na receita, separando-os por vírgula, ao final, clique <br>no item de lupa e escolha a receita que mais gostou.</h1>
         </article>
       </section>
 
       <section class="align-start">
         <article class="start">
-          <h1>Vamos começar !</h1>
-          <button><h1>Selecione seus ingredientes aqui ! </h1><img src="img/click.svg" alt=""></button>
+          <img src="img/vamos-comecar.png" alt="">
+          <div class="botao">
+            <button><h1>Escreva seus ingredientes aqui !</h1><img src="img/lupa-cinza.svg" alt=""></button>
+          </div>
         </article>
       </section>
 
