--- a/index.html
+++ b/index.html
@@ -62,20 +62,30 @@
             <p>Opcões nutritivas e deliciosas <br> para você alcaçar seus <br> objetivos</p>
           </div>
           <div class="card-one">
-            <img src="img/copo.svg" alt="">
-            <h1>Fit</h1>
-            <p>Opcões nutritivas e deliciosas <br> para você alcaçar seus <br> objetivos</p>
+            <img src="img/saudavel.svg" alt="">
+            <h1>Sustentável</h1>
+            <p>Receitas que priorizam o uso <br>consciente de ingredientes e <br>reduzem o desperdício de <br>alimentos.
           </div>
           <div class="card-one">
-            <img src="img/copo.svg" alt="">
-            <h1>Fit</h1>
-            <p>Opcões nutritivas e deliciosas <br> para você alcaçar seus <br> objetivos</p>
+            <img src="img/lampada.svg" alt="">
+            <h1>Dicas</h1>
+            <p>Técnicas e truques culinários <br>que ajudam no preparo de <br> receitas e na organização da <br>cozinha.</p>
           </div>
           <div class="card-one">
-            <img src="img/copo.svg" alt="">
-            <h1>Fit</h1>
-            <p>Opcões nutritivas e deliciosas <br> para você alcaçar seus <br> objetivos</p>
+            <img src="img/bandeira.svg" alt="">
+            <h1>Culturas variadas</h1>
+            <p>Explore o mundo através da <br>comida, com receitas autênticas <br>de diferentes países e culturas.</p>
           </div>
+        </article>
+      </section>
+
+      <section>
+        <article class="faixa-logo">
+          <img src="img/kitchen-logo.svg" alt="">
+          <img src="img/kitchen-logo.svg" alt="">
+          <img src="img/kitchen-logo.svg" alt="">
+          <img src="img/kitchen-logo.svg" alt="">
+          <img src="img/kitchen-logo.svg" alt="">
         </article>
       </section>
 
@@ -123,7 +133,7 @@
             allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
           </map>
-          <img src="img/logo.svg" alt="ilustração de um mini milkshake rosa">
+          <img src="img/logo.svg" alt="logo de um chápeu branco com o nome da empresa">
         </article>
       </footer>
 </body>
