--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           </div>
       </nav>
       </header>
+
       <main>
         <img src="img/home.svg" alt="">
       </main>
@@ -35,9 +36,9 @@
 
       <section class="align-start">
         <article class="start">
-          <img src="img/vamos-comecar.png" alt="">
+          <img src="img/vamos-comecar.png" alt=""> 
           <div class="botao">
-            <button><h1>Escreva seus ingredientes aqui !</h1><img src="img/lupa-cinza.svg" alt=""></button>
+            <button><h1>Escreva seus ingredientes aqui !</h1>  <a href="receitas.html" target="_self"><img src="img/lupa-cinza.svg" alt=""></a> </button>
           </div>
         </article>
       </section>
