--- a/receitas.html
+++ b/receitas.html
@@ -26,16 +26,46 @@
                 <div class="faixa-laranja"></div>
                 <h1>Crepioca de queijo</h1>
                 <p>Contém: Tapioca, ovo, queijo. </p>
-            </div>
-            <div class="timer"> 
-                <img src="img/timer.svg" alt="">
-                <h1>12 min</h1>
-            </div>
-            <div class="people"> 
-                <img src="img/profile.svg" alt="">
-                <h1>1 Porção</h1>
-            </div>
+                <div class="timer"> 
+                  <img src="img/timer.svg" alt="">
+                  <h1>12 min</h1>
+              </div>
+              <div class="people"> 
+                  <img src="img/profile.svg" alt="">
+                  <h1>1 Porção</h1>
+              </div>
+              </div>
+              
         </article>
+        <div class="card">
+          <img src="img/tapioca.svg" alt="">
+          <div class="faixa-laranja"></div>
+          <h1>Tapioca com ovo e queijo</h1>
+          <p>Contém: Tapioca, ovo, queijo. </p>
+          <div class="timer"> 
+            <img src="img/timer.svg" alt="">
+            <h1>12 min</h1>
+        </div>
+        <div class="people"> 
+            <img src="img/profile.svg" alt="">
+            <h1>1 Porção</h1>
+        </div>
+        </div>
+
+        <div class="card">
+          <img src="img/ovos-mexidos.svg" alt="">
+          <div class="faixa-laranja"></div>
+          <h1>Ovos mexidos com queijo</h1>
+          <p>Contém: Ovo, queijo.</p>
+          <div class="timer"> 
+            <img src="img/timer.svg" alt="">
+            <h1>10 min</h1>
+        </div>
+        <div class="people"> 
+            <img src="img/profile.svg" alt="">
+            <h1>1 Porção</h1>
+        </div>
+        </div>
       </section>
 </body>
 </html>
