Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <a href="">Home</a>
           <a href="">Ingredientes</a>
           <div class="logo">
-            <img src="img/logo.svg" alt="">
+            <img src="img/logo.svg" alt="logo de um chapéu branco">
           </div>
           <a href="">Receitas</a>
           <a href="">Contato</a>
